--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,10 @@ h5{
 
 /* END IMAGE HEIGHTS */
 
+.br-h{
+	border-right:0px !important;
+}
+
 .image{
 	background-position:center;
 }
